# oatpp-sync-to-thread

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: flawfinder.yml  msvc.yml
include/: globals.hpp  syncApi.hpp
include/camera/: camThread.hpp
include/webapi/: appComponent.hpp  swaggerComponent.hpp  webApp.hpp
include/webapi/controller/: cameraController.hpp  cameraControllerCV.hpp  cameraControllerSyncSimple.hpp  cameraControllerTimer.hpp
include/webapi/dto/: camerSettingsDto.hpp  frameDto.hpp
src/: CMakeLists.txt  globals.cpp  testSync.cpp
src/camera/: camThread.cpp
src/webapi/: cameraController.cpp  cameraControllerCV.cpp  webApp.cpp
